app/css/styles.scss
@import '../libs/font-awesome/css/font-awesome.min.css';
@import '../libs/bootstrap/dist/css/bootstrap.min.css';
@import '../libs/bootstrap/dist/css/bootstrap-theme.min.css';
@import '../libs/bootstrap-daterangepicker/daterangepicker.min.css';
@import '../libs/EasyAutocomplete/dist/easy-autocomplete.min.css';
@import '../libs/datatables/datatables.min.css';
@import '../libs/animate.css/animate.min.css';

/*
 * Fonts
 */
@font-face {
  font-family: 'Open Sans Regular';
  src: url('../fonts/OpenSans-Regular.ttf');
}

/*
 * Html, body
 */
html, body {
  margin:0;
  padding:0;
}

body {
  font-family: 'Open Sans Regular', sans-serif;
  min-width: 960px;
  overflow: hidden;
}

/*
 * Datatables
 */
table.dataTable.dtr-column>tbody>tr>td.control:before,
table.dataTable.dtr-column>tbody>tr>th.control:before {
  height: 0;
  width: 0;
  margin-top: 0;
  margin-left: 0;
  border: 0;
  border-radius: 0;
  box-shadow: 0 0 0 0;
  box-sizing: content-box;
  font-family: sans-serif;
  line-height: 0;
  content: '';
}
table.dataTable.dtr-column>tbody>tr.parent td.control:before,
table.dataTable.dtr-column>tbody>tr.parent th.control:before {
  content: '';
}
.btn-details-child, .btn-edit-child, .btn-delete-child {
  font-size: 12px;
}
.btn-details-child > .fa-square {
  color: #5cb85c;
}
.parent > .control > .btn-details-child > .fa-square {
  color: #337ab7;
}
.btn-edit-child > .fa-square {
  color: #f0ad4e;
}
.btn-delete-child > .fa-square {
  color: #d9534f;
}

/*
 * Left menu
 */
$lm-bck: #7a9735; //$body-back
$lm-txt: #eee;
$lm-h1: #eee;
$lm-h2: #ddd;
$lm-active: #0d4d4d; //226666
$lm-hover: #567714;
$lm-list: #ddd;
$lm-icon: #ccc;
$lm-icon-hover: #ddd;

#left-menu {
  background-color: $lm-bck;
  color: $lm-txt;
  min-height: 100vh;
  max-height: 100vh;
  width: 250px;
  position: fixed;
  top: 0;
  left: 0;
  overflow-y: auto;
  padding-left: 0;
  padding-right: 7px;
  padding-bottom: 25px;
  z-index: 201;
  h1 { //app title
    font-size: 16px;
    font-weight: bold;
    padding-left: 15px;
  }
  h2 { //plants title
    font-size: 14px;
    font-weight: bold;
    padding-left: 15px;
    padding-right: 7px;
    a > i { //add plant plus icon
      color: $lm-icon;
      float: right;
    }
    a > i:hover {
      color: $lm-icon-hover;
    }
  }
  //hide/show plant icons on li hover
  ul > li {
    a > i {
      opacity: 0;
    }
  }
  ul > li:hover {
    a > i {
      opacity: 1;
    }
  }
  //plant list and icons style
  ul > li { //plant list
    margin: 0;
    a { //plant item
      border-radius: 0 5px 5px 0;
      padding: 2px 7px 2px 15px;
      i { //plant item edit/delete icon
        color: $lm-icon;
        float: right;
        margin-top: 3px;
      }
      i:hover {
        color: $lm-icon-hover;
      }
      i.fa-times-circle {
        margin-left: 5px;
      }
    }
  }
  //list item hover colors
  ul > li {
    a, a:focus {
      background-color: $lm-bck;
      color: $lm-list;
    }
    a:hover {
      background-color: $lm-hover;
    }
  }
  ul > li.active {
    a, a:focus, a:hover {
      background-color: $lm-active;
    }
  }
}

/*
 * Main content
 */
$tab-link: #106c6c;

#content {
  z-index: 101;
  min-height: 100vh;
  max-height: 100vh;
  overflow: auto;
  width: 100%;
  min-width: 960px;
  max-width: 100%;
  padding-left: 250px;
}

//welcome
#content-welcome {
  padding-top: 150px;
  text-align: center;
}

//plant
#content-plant {
  display: none;
  max-width: 100%;
  padding: 10px 10px 0 10px;
}
#content-plant-title-name {
  font-size: 20px;
  font-weight: 600;
}
#btn-open-add-child-modal {
  margin-bottom: 10px;
}
.nav-tabs {
  margin-top: 4px;
  margin-left: -10px;
  margin-right: -10px;
  li:first-child {
    margin-left: 10px;
  }
  li > a {
    border-radius: 0;
    line-height: 0.6;
    color: $tab-link;
  }
}

.tab-pane {
  padding-top: 15px;
}

.tab-content {
  margin-left: -10px;
  margin-right: -10px;
  padding: 15px;
  min-width: 100%;
  min-height: calc(100vh - 72px);
  overflow: auto;
}

#plant-children-table {
  width: 100%;
}

//child
#content-child {
  display: none;
}



.plant-children-datatable-wrapper,
.plant-stats-datatable-wrapper {
  margin-top: 15px;
}

// --- plants > stats
.tab-plant-stats {

}

// --- plants > children
.tab-plant-children {

}

/*
 * Modals
 */
.easy-autocomplete {
  width: 100% !important;
}

// --- select2
.select2 > .selection > .select2-selection {
  height: 34px;

  .select2-selection__rendered {
    line-height: 31px;
  }

  .select2-selection__arrow {
    top: 4px;
  }
}

.btn-xs, .form-inline {
  display: inline-block;
}

